Fixes some spacings

--- a/css/common.css
+++ b/css/common.css
@@ -48,6 +48,10 @@ h1 {
   line-height: 1;
 }
 
+h2 {
+  line-height: 1.2;
+}
+
 a {
   color: var(--color-link);
 }
@@ -94,12 +98,8 @@ dd + dt {
   margin-block-start: 1em;
 }
 
-:where(.Note *) {
+.Note h2 {
   margin-block: 0;
-}
-
-:where(.Note * + *) {
-  margin-block-start: 1.5em;
 }
 
 .Note-til + h2 {
@@ -107,7 +107,12 @@ dd + dt {
 }
 
 .Note-date {
+  display: block;
   color: var(--color-secondary);
+}
+
+h2 + .Note-date {
+  margin-block-start: 0.5rem;
 }
 
 .Note-til {
@@ -127,10 +132,6 @@ pre,
 
 pre {
   padding: 1em;
-}
-
-pre * {
-  margin-block-start: 0;
 }
 
 :not(pre) > code {
